--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -56,36 +56,44 @@
     border-radius: 0.725rem;
     height: 3rem;
 
+    background-repeat: no-repeat;
+    background-position: right 1rem top -1rem;
+
     img {
         margin-right: 1rem;
         height: 3rem;
         width: 6rem;
         
         object-fit:none;
-
     }
 }
 
 .work {
     background-color: var(--orange);
+    background-image: url('../../assets/icon-work.svg');
 }
 
 .play {
     background-color: var(--blue-500);
+    background-image: url('../../assets/icon-play.svg');
 }
 
 .study {
     background-color: var(--red);
+    background-image: url('../../assets/icon-study.svg');
 }
 
 .exercise {
     background-color: var(--green);
+    background-image: url('../../assets/icon-exercise.svg');
 }
 
 .social {
     background-color: var(--violet);
+    background-image: url('../../assets/icon-social.svg');
 }
 
 .selfCare {
     background-color: var(--yellow);
+    background-image: url('../../assets/icon-self-care.svg');
 }
