--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,10 +4,12 @@
     box-sizing: border-box;
     font-family: 'Rubik', sans-serif;
     font-weight: 300;
+
+    transition: 0.2s;
 }
 
 body {
-    font-size: 1.125 rem;
+    font-size: 1.125rem;
     background: var(--blue-800);
 }
 
